[gd_scene load_steps=10 format=3 uid="uid://bm31s2mf00871"]

[ext_resource type="Script" uid="uid://cl2vfu8iu4srn" path="res://scenes/game_over.gd" id="1_sseyc"]
[ext_resource type="FontFile" uid="uid://djaieaje5xy0v" path="res://assets/fonts/PixelifySans-VariableFont_wght.ttf" id="2_anb0t"]
[ext_resource type="Texture2D" uid="uid://bswrkxusl4w2y" path="res://assets/game_over/game_over_screen.png" id="2_vtso4"]
[ext_resource type="AudioStream" uid="uid://q8h4qtukr2g1" path="res://audios/game_over_music.mp3" id="4_vtso4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p1tbv"]
bg_color = Color(0.36, 0.18456002, 0.050399996, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.2048212, 0.09811353, 0.022830449, 0.6)
shadow_size = 3
shadow_offset = Vector2(0, 1.42)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqjl0"]
bg_color = Color(0.23, 0.11791334, 0.032199997, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.2048212, 0.09811353, 0.022830449, 0.6)
shadow_size = 3
shadow_offset = Vector2(0, 1.42)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mpp1"]
bg_color = Color(0.31, 0.15892668, 0.043399997, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.2048212, 0.09811353, 0.022830449, 0.6)
shadow_size = 3
shadow_offset = Vector2(0, 1.42)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tbth1"]

[sub_resource type="LabelSettings" id="LabelSettings_anb0t"]
font = ExtResource("2_anb0t")
font_size = 43
font_color = Color(0.8235294, 0.7254902, 0.20784314, 1)
outline_size = 6
outline_color = Color(0.3343914, 0.22400028, 0.041184478, 1)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_sseyc")

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_vtso4")
expand_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 276.0
offset_top = 386.0
offset_right = 931.1249
offset_bottom = 447.73596
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 13
alignment = 1

[node name="try_again" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.73333335, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.8000001, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.85800004, 0.29000002, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.85800004, 0.29000002, 1)
theme_override_fonts/font = ExtResource("2_anb0t")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_p1tbv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iqjl0")
theme_override_styles/hover = SubResource("StyleBoxFlat_3mpp1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tbth1")
text = "TRY AGAIN"
autowrap_trim_flags = 0

[node name="main_menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.73333335, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.8000001, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.85800004, 0.29000002, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.85800004, 0.29000002, 1)
theme_override_fonts/font = ExtResource("2_anb0t")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_p1tbv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iqjl0")
theme_override_styles/hover = SubResource("StyleBoxFlat_3mpp1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tbth1")
text = " MAIN MENU"
autowrap_trim_flags = 0

[node name="quit_game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.73333335, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.8000001, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.85800004, 0.29000002, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.85800004, 0.29000002, 1)
theme_override_fonts/font = ExtResource("2_anb0t")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_p1tbv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iqjl0")
theme_override_styles/hover = SubResource("StyleBoxFlat_3mpp1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tbth1")
text = "QUIT GAME"
autowrap_trim_flags = 0

[node name="ScoreFinalLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 533.0
offset_top = 314.0
offset_right = 667.0
offset_bottom = 363.0
grow_horizontal = 2
grow_vertical = 2
text = "SCORE: "
label_settings = SubResource("LabelSettings_anb0t")

[node name="GameOVerMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vtso4")
autoplay = true

[connection signal="pressed" from="VBoxContainer/try_again" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="VBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_game" to="." method="_on_quit_game_pressed"]
